albums hiding behind player bug fixed.

--- a/src/app/core/components/browse/browse.component.scss
+++ b/src/app/core/components/browse/browse.component.scss
@@ -3,6 +3,7 @@
 .browse {
     margin-top: 10vh;
     margin-left: 15%;
+    margin-bottom: 100px;
 
     &-albums {
         font-family: "Open Sans", sans-serif;
