--- a/src/app/shared/components/player/player.component.scss
+++ b/src/app/shared/components/player/player.component.scss
@@ -1,18 +1,20 @@
 @import "~src/assets/scss/styles";
 
 .player {
-  position: fixed;
-  bottom: 0;
-  width: 85%;
-  &-icons {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background: $lightBlack;
-    color: $mainWhite;
+    position: fixed;
+    bottom: 0;
+    width: 85%;
+    margin-left: 15%;
 
-    &__icon {
-      margin: 20px;
+    &-icons {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background: $lightBlack;
+        color: $mainWhite;
+
+        &__icon {
+            margin: 20px;
+        }
     }
-  }
 }
